<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sqliteapp.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_name"
        android:id="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText2"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_rating"
        android:id="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAdd"
        />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAdd"
        android:text="@string/button_add"
        app:layout_constraintBottom_toTopOf="@id/buttonListAll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonList"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintLeft_toRightOf="@id/buttonList"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonListAll"
        android:id="@+id/buttonDelete"
        android:onClick="onClickDelete"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_list"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintLeft_toRightOf="@id/buttonAdd"
        app:layout_constraintRight_toLeftOf="@id/buttonDelete"
        app:layout_constraintBottom_toTopOf="@id/buttonListAll"
        android:id="@+id/buttonList"
        android:onClick="onClickList"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_listall"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonDeleteAll"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/buttonListAll"
        android:onClick="onClickListAll"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_deleteall"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
        app:layout_constraintLeft_toRightOf="@id/buttonListAll"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/buttonDeleteAll"
        android:onClick="onClickDeleteAll"/>

</android.support.constraint.ConstraintLayout>
